# hand-gesture-recognition

./: .gitignore  app.py  app_with_asl.py  app_with_keypoint.py  main.py  pyproject.toml  utils.py
model/: __init__.py
model/asl_classifier/: asl_classifier.keras  asl_classifier.py  asl_classifier.tflite  asl_labels.csv
model/keypoint_classifier/: keypoint_classifier.keras  keypoint_classifier.py  keypoint_classifier.tflite
model/keypoint_classifier/keypoint_logs/run_001/train/: events.out.tfevents.1755158574.LAPTOPTHNNDAT.7506.0.v2  events.out.tfevents.1755158663.LAPTOPTHNNDAT.7506.2.v2
model/keypoint_classifier/keypoint_logs/run_001/validation/: events.out.tfevents.1755158575.LAPTOPTHNNDAT.7506.1.v2  events.out.tfevents.1755158663.LAPTOPTHNNDAT.7506.3.v2
notebooks/: asl_classification.ipynb  keypoint_classification.ipynb  preprocessing.ipynb
