[project]
name = "hand-gesture-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ai-edge-litert>=1.4.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "mediapipe>=0.10.21",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "tensorflow>=2.18.1",
]
